; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/gpio/extr_nv10.c_nv10_gpio_fini.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/gpio/extr_nv10.c_nv10_gpio_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nv10_gpio_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*, i32)* @nv10_gpio_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nv10_gpio_fini(%struct.nouveau_object* %0, i32 %1) #0 {
  %3 = alloca %struct.nouveau_object*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nv10_gpio_priv*, align 8
  store %struct.nouveau_object* %0, %struct.nouveau_object** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nouveau_object*, %struct.nouveau_object** %3, align 8
  %7 = bitcast %struct.nouveau_object* %6 to i8*
  %8 = bitcast i8* %7 to %struct.nv10_gpio_priv*
  store %struct.nv10_gpio_priv* %8, %struct.nv10_gpio_priv** %5, align 8
  %9 = load %struct.nv10_gpio_priv*, %struct.nv10_gpio_priv** %5, align 8
  %10 = call i32 @nv_wr32(%struct.nv10_gpio_priv* %9, i32 4420, i32 0)
  %11 = load %struct.nv10_gpio_priv*, %struct.nv10_gpio_priv** %5, align 8
  %12 = getelementptr inbounds %struct.nv10_gpio_priv, %struct.nv10_gpio_priv* %11, i32 0, i32 0
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @nouveau_gpio_fini(i32* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @nv_wr32(%struct.nv10_gpio_priv*, i32, i32) #1

declare dso_local i32 @nouveau_gpio_fini(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
